# zotero-mcp

./: .gitignore  .project.yml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
crates/zotero-core/: Cargo.toml
crates/zotero-core/src/: bbt.rs  cache.rs  citations.rs  config.rs  error.rs  lib.rs  pdf.rs  web.rs
crates/zotero-core/src/enrichment/: arxiv.rs  crossref.rs  mod.rs  openlibrary.rs  pdf_signals.rs  propose.rs  scoring.rs  semantic_scholar.rs
crates/zotero-core/src/reader/: annotations.rs  attachments.rs  collections.rs  conn.rs  fulltext.rs  items.rs  mod.rs  pool.rs  recent.rs  search.rs  tags.rs
crates/zotero-core/src/writer/: client.rs  items.rs  mod.rs  notes.rs  tags.rs
crates/zotero-core/tests/: bbt_client.rs  cache.rs  citations.rs  enrich_arxiv.rs  enrich_crossref.rs  enrich_openlibrary.rs  enrich_pdf_signals.rs  enrich_propose.rs  enrich_scoring.rs  enrich_semantic_scholar.rs  fixtures_sanity.rs  items_with_bbt.rs  live_integration.rs  pdf_text.rs  reader_annotations.rs  reader_attachments.rs  reader_browse.rs  reader_conn.rs  reader_fulltext.rs  reader_items.rs  reader_pool.rs  reader_search.rs  web_content.rs  web_refetch.rs  writer_client.rs  writer_items.rs  writer_notes.rs  writer_tags.rs
crates/zotero-core/tests/fixtures/: build_fixture.rs  mod.rs
crates/zotero-mcp/: Cargo.toml  build.rs
crates/zotero-mcp/src/: bearer.rs  http_transport.rs  lib.rs  logging.rs  main.rs  oauth.rs  server.rs  setup.rs  state.rs
crates/zotero-mcp/src/core/: bbt.rs  cache.rs  citations.rs  config.rs  error.rs  mod.rs  pdf.rs  types.rs  web.rs
crates/zotero-mcp/src/core/enrichment/: arxiv.rs  crossref.rs  mod.rs  openlibrary.rs  pdf_signals.rs  propose.rs  scoring.rs  semantic_scholar.rs
crates/zotero-mcp/src/core/reader/: annotations.rs  attachments.rs  collections.rs  conn.rs  fulltext.rs  items.rs  mod.rs  pool.rs  recent.rs  search.rs  tags.rs
crates/zotero-mcp/src/core/writer/: attachments.rs  client.rs  items.rs  mod.rs  notes.rs  tags.rs
crates/zotero-mcp/src/oauth/: token_store.rs
crates/zotero-mcp/src/resources/: collections.rs  mod.rs  tags.rs
crates/zotero-mcp/src/tools/: attachments.rs  citations.rs  enrichment.rs  mod.rs  search.rs  writes.rs
crates/zotero-mcp/tests/: bbt_client.rs  cache.rs  citations.rs  enrich_arxiv.rs  enrich_crossref.rs  enrich_openlibrary.rs  enrich_pdf_signals.rs  enrich_propose.rs  enrich_scoring.rs  enrich_semantic_scholar.rs  fixtures_sanity.rs  items_with_bbt.rs  live_integration.rs  pdf_extraction.rs  pdf_text.rs  reader_annotations.rs  reader_attachments.rs  reader_browse.rs  reader_conn.rs  reader_fulltext.rs  reader_items.rs  reader_pool.rs  reader_search.rs  schema_shape.rs  web_content.rs  web_refetch.rs  writer_attach_file.rs  writer_attach_link.rs  writer_client.rs  writer_create_item.rs  writer_items.rs  writer_live_zotero.rs  writer_notes.rs  writer_tags.rs
crates/zotero-mcp/tests/fixtures/: build_fixture.rs  gen_pdfs.py
docs/: CLAUDE_CODE_SETUP.md  CLAUDE_COWORK_SETUP.md
docs/launchd/: com.zotero-mcp.http.plist
docs/superpowers/plans/: 2026-05-11-oauth-authentication.md  2026-05-11-pdf-extraction-fallback.md  2026-05-11-zotero-connector.md  2026-05-12-oauth-token-durability-testing.md  2026-05-12-oauth-token-durability.md  2026-05-12-zotero-item-creation.md  2026-05-13-dependency-upgrades-slice-a.md  2026-05-13-dependency-upgrades-slice-b.md  2026-05-13-dependency-upgrades-slice-c.md  2026-05-13-dependency-upgrades-slice-e.md  2026-05-13-dependency-upgrades-slice-f.md  2026-05-13-dependency-upgrades-slice-g.md  2026-05-13-tool-output-normalisation.md
docs/superpowers/specs/: 2026-05-11-pdf-extraction-fallback-design.md  2026-05-11-zotero-connector-design.md  2026-05-12-oauth-token-durability-design.md  2026-05-12-zotero-item-creation-design.md  2026-05-13-dependency-upgrades-slice-a-design.md  2026-05-13-dependency-upgrades-slice-b-design.md  2026-05-13-dependency-upgrades-slice-c-design.md  2026-05-13-dependency-upgrades-slice-e-design.md  2026-05-13-dependency-upgrades-slice-f-design.md  2026-05-13-dependency-upgrades-slice-g-design.md  2026-05-13-tool-output-normalisation-design.md
openspec/: config.yaml
openspec/changes/archive/2026-07-17-llm-reliable-pdf-extraction/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-17-llm-reliable-pdf-extraction/specs/pdf-extraction/: spec.md
openspec/changes/llm-reliable-pdf-extraction/: tasks.md
openspec/changes/scan-and-large-pdf-extraction/: design.md  proposal.md  tasks.md
openspec/changes/scan-and-large-pdf-extraction/specs/pdf-extraction/: spec.md
openspec/specs/pdf-extraction/: spec.md
