[workspace]
members = ["crates/zotero-mcp"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.3.1"
authors = ["Richard Lyon"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/richardjlyon/zotero-mcp"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
deadpool-sqlite = "0.13"
directories = "6"
miette = { version = "7", features = ["fancy"] }
pdf-extract = "0.10"
readability = "0.3"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "gzip", "brotli", "query"] }
rmcp = { version = "1", features = ["server", "macros", "schemars", "transport-io", "transport-streamable-http-server"] }
rusqlite = { version = "0.38", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[workspace.dependencies.wiremock]
version = "0.6"
