[package]
name = "zotero-core"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
deadpool-sqlite.workspace = true
directories.workspace = true
miette.workspace = true
pdf-extract.workspace = true
readability.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
url = "2"

[dev-dependencies]
tempfile = "3"
wiremock.workspace = true
