[package]
name = "zotero-mcp"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "zotero-mcp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
reqwest.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
schemars = "0.8"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["auth", "trace"] }
tokio-util = "0.7"
tokio-stream = "0.1"
futures = "0.3"
rand = "0.9"
base64 = "0.22"
directories.workspace = true
toml.workspace = true
zotero-core = { path = "../zotero-core" }
