[package]
name = "zotero-mcp"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "zotero_mcp"
path = "src/lib.rs"

[[bin]]
name = "zotero-mcp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
reqwest.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
schemars = "0.8"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["auth", "trace"] }
tokio-util = "0.7"
tokio-stream = "0.1"
futures = "0.3"
rand = "0.9"
base64 = "0.22"
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
directories.workspace = true
toml.workspace = true
# Merged from former zotero-core crate (the low-level Zotero readers/writers,
# enrichment HTTP clients, citation rendering, PDF/webpage extraction).
deadpool-sqlite.workspace = true
miette.workspace = true
pdf-extract.workspace = true
readability.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
url = "2"

[dev-dependencies]
tempfile = "3"
wiremock.workspace = true
