[package]
name = "zotero-mcp"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Local-first MCP server bridging Claude to your Zotero library — search, read, cite, enrich, write — over stdio or HTTP/SSE with OAuth 2.1."
readme = "../../README.md"
homepage = "https://github.com/richardjlyon/zotero-mcp"
documentation = "https://docs.rs/zotero-mcp"
keywords = ["zotero", "mcp", "claude", "research", "citations"]
categories = ["command-line-utilities", "science", "api-bindings"]

[lib]
name = "zotero_mcp"
path = "src/lib.rs"

[[bin]]
name = "zotero-mcp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
reqwest.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
schemars = "1"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["auth", "trace"] }
tokio-util = "0.7"
tokio-stream = "0.1"
futures = "0.3"
rand = "0.10"
base64 = "0.22"
sha2 = "0.11"
md-5 = "0.11"
mime_guess = "2"
clap = { version = "4", features = ["derive"] }
directories.workspace = true
toml.workspace = true
# Merged from former zotero-core crate (the low-level Zotero readers/writers,
# enrichment HTTP clients, citation rendering, PDF/webpage extraction).
deadpool-sqlite.workspace = true
miette.workspace = true
pdf-extract.workspace = true
readability.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
url = "2"
urlencoding = "2"
which = "8"

[dev-dependencies]
tempfile = "3"
wiremock.workspace = true
